[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/cbar.gd" type="Script" id=1]
[ext_resource path="res://ui/fonts/seguihis.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/fonts/Arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/setup/setup.gd" type="Script" id=4]
[ext_resource path="res://ui/themes/text_entry.tres" type="Theme" id=5]
[ext_resource path="res://ui/themes/default_button.tres" type="Theme" id=6]
[ext_resource path="res://ui/icons/application_icon.png" type="Texture" id=7]
[ext_resource path="res://ui/graphics/setup/first_page.png" type="Texture" id=8]

[sub_resource type="Animation" id=14]
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 64, -0.25, 0, 0.25, 0, 32, -0.25, 0, 0.25, 0, 64, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.8 )
}

[sub_resource type="DynamicFont" id=1]
size = 25
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
use_filter = true
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="backround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.997
margin_bottom = 1.79999
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="icon" type="TextureRect" parent="backround"]
margin_left = 448.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 7 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="backround/icon"]
autoplay = "icon"
anims/icon = SubResource( 14 )

[node name="title" type="Label" parent="backround"]
margin_left = 320.0
margin_top = 200.0
margin_right = 704.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 1 )
text = "Email Confirmation"
align = 1
valign = 1

[node name="page_indicator" type="TextureRect" parent="backround"]
margin_left = 448.0
margin_top = 552.0
margin_right = 576.0
margin_bottom = 585.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 4

[node name="indicator" type="Label" parent="backround"]
margin_left = 328.0
margin_top = 408.0
margin_right = 608.0
margin_bottom = 424.0
align = 1
valign = 1

[node name="otp_label" type="RichTextLabel" parent="."]
margin_left = 328.0
margin_top = 264.0
margin_right = 696.0
margin_bottom = 352.0
rect_pivot_offset = Vector2( 888, 208 )
custom_colors/default_color = Color( 1, 1, 1, 0.627451 )
custom_fonts/normal_font = SubResource( 13 )
text = "A 6 digit security code has been sent to your email inbox at (%s). If you did not recieve it, please press the resend button, check in your spam folder, or check your internet connection."

[node name="text_entry_1" type="LineEdit" parent="."]
margin_left = 336.0
margin_top = 368.0
margin_right = 600.0
margin_bottom = 400.0
theme = ExtResource( 5 )
max_length = 6
context_menu_enabled = false
placeholder_text = "Enter Code"
caret_blink = true

[node name="resend" type="Button" parent="."]
margin_left = 616.0
margin_top = 368.0
margin_right = 680.0
margin_bottom = 400.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 0.705882 )
custom_colors/font_color_hover = Color( 0, 0.835294, 1, 1 )
text = "Resend"
flat = true

[node name="next" type="Button" parent="."]
margin_left = 944.0
margin_top = 552.0
margin_right = 1008.0
margin_bottom = 584.0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
text = "Next"

[node name="cancel" type="Button" parent="."]
margin_left = 8.0
margin_top = 560.0
margin_right = 72.0
margin_bottom = 592.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.835294, 1, 1 )
text = "Cancel"
flat = true

[node name="cbar" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 32.0
script = ExtResource( 1 )

[node name="exit" type="Button" parent="cbar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 998.499
margin_top = 2.584
margin_right = -2.50098
margin_bottom = -4.416
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="backround/icon/AnimationPlayer" to="." method="_on_icon_animation_finished"]
[connection signal="ready" from="otp_label" to="." method="_on_otp_label_ready"]
[connection signal="pressed" from="resend" to="." method="_on_resend_pressed"]
[connection signal="pressed" from="next" to="." method="_on_email_confirmation_next_pressed"]
[connection signal="pressed" from="cancel" to="." method="_on_cancel_pressed"]
[connection signal="gui_input" from="cbar" to="cbar" method="_on_cbar_gui_input"]
[connection signal="pressed" from="cbar/exit" to="cbar" method="_on_exit_pressed"]
