[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/fonts/seguihis.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/icons/application_icon.png" type="Texture" id=2]
[ext_resource path="res://ui/themes/default_button.tres" type="Theme" id=3]
[ext_resource path="res://scenes/setup/setup.gd" type="Script" id=5]
[ext_resource path="res://scenes/cbar.gd" type="Script" id=11]
[ext_resource path="res://ui/fonts/Arial.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=1]
size = 25
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 14
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 12 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="backround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.997
margin_bottom = 1.79999
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="icon" type="TextureRect" parent="backround"]
margin_left = 448.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 192.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="backround/icon"]
margin_left = -128.0
margin_top = 136.0
margin_right = 256.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 1 )
text = "Local Account Creation Successful"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="RichTextLabel" parent="."]
margin_left = 328.0
margin_top = 352.0
margin_right = 696.0
margin_bottom = 416.0
custom_colors/default_color = Color( 1, 1, 1, 0.54902 )
custom_fonts/normal_font = SubResource( 2 )
text = "This local account is used to access this software's Settings, Restricted Websites   (If enabled)   and, Google Chrome. This account informaton can be changed later in settings."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_intro" type="Button" parent="."]
margin_left = 928.0
margin_top = 552.0
margin_right = 1008.0
margin_bottom = 584.0
rect_pivot_offset = Vector2( 80, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
text = "Start Intro"

[node name="cbar" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 32.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="cbar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 998.499
margin_top = 2.584
margin_right = -2.50098
margin_bottom = -4.416
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="start_intro" to="." method="_on_successful_start_intro_pressed"]
[connection signal="gui_input" from="cbar" to="cbar" method="_on_cbar_gui_input"]
[connection signal="pressed" from="cbar/exit" to="cbar" method="_on_exit_pressed"]
